# sshadder

./: .gitignore  .travis.yml  README.rst  dist.sh  index.html  requirements.txt  requirements_test.txt  setup.cfg  tox.ini
docs/: index.html
sshadder/: __init__.py  cli.py  sshadder.py
test/: test_cli.py  test_sshadder.py
