[metadata]
name = sshadder
author = Max Kovgan
author-email = maxk@devopsent.biz
summary = Automatic loader of ssh keys
description-file = README.rst
home-page = https://github.com/mvk/shadder
license = Apache-2
requires =
    simplecrypt
    pexpect
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils
[files]
packages =
    sshadder
[entry_points]
console_scripts =
    sshadder = sshadder:main
